# qt_huffman_compression

./: CMakeLists.txt  bitstream.cpp  bitstream.hpp  filecompressor.cpp  filecompressor.hpp  huffman.cpp  huffman.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
